styles.css
/*linking in css stylesheet to pull in different style defaults for small/mobile screens- note page was not designed mobile first due to the parameters of this project*/
/* @import url('desktop-styles.css') (min-width:800px); */
@import "mobile-styles.css" screen and (max-width: 600px);
@import "tablet-styles.css" screen and (min-width: 600px) and (max-width: 768px);
@import "landscape-tablets-styles.css" screen and (min-width: 768px) and (max-width: 992px);
@import "laptops-styles.css" screen and (min-width: 992px) and (max-width: 1200px);
@import "extra-large-devices-styles.css" screen and (min-width: 1200px);


/* Header Formatting- all screen widths */
h1 {
	background-color: white;
	text-align: center;
	font-family: "Galindo", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: black;
}
.homepage-head-background {
	width: 100%;
	background-size: cover;
	background-repeat: no-repeat;
}

/* Portfolio Subpage Headers- all screen widths */
.sub-portfolio-head-background {
	width: 100%;
	background-size: cover;
	background-repeat: no-repeat;
}

.rethink-sans-subhead {
	font-family: "Rethink Sans", sans-serif;
	font-optical-sizing: auto;
	font-weight: 700;
	font-style: normal;
  }
.portfolio-heading {
	font-family: "Rethink Sans", sans-serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
}
.rethink-sans-bodyfont {
	font-family: "Rethink Sans", sans-serif;
	font-optical-sizing: auto;
	font-weight: 400;
	font-style: normal;
  }

/* Homepage Content Styling */
.home-container {
    display: flex;
    /* grid-template-columns: 50% 50%; */
    background-color: #ffffff;
    /* padding: 0 0 0 0; */
	/* gap: 10px 10px; */
}
.home-container > div {
	background-color: white;
	color: black;
	padding: 1fr;
	text-align: center;
  }
  .home-container > #about-blurb {
	/* font-size: 3vw; */
	/* text-align: justify; */
  }
#button-menu {
	display:flex;
	justify-content: center;
}
/* .home-button-layout {
} */
#home-h2 {
	margin-left: 0;
}
#portfolio-button {
	/* font-size: 5vw; */
	background-color: #ff7400;
	color: white;
}
#portfolio-button a {
	color: white;
	font-family: "Cantora One", sans-serif;
	font-style: normal;
}
#resume-button {
	/* font-size: 5vw; */
	background-color: #ff7400;
}
#resume-button a {
	color: white;
	font-family: "Cantora One", sans-serif;
	font-style: normal;
}
button a {
	text-decoration: none;
}
button a:hover{
	text-decoration:underline;
}
/* Button to return to homepage styling */
#home-page {
	background-color: #f0cfce;
}
#home-page a {
	color: black;
}

/* Styling the Portfolio Page*/
.portfolio-heading {
	/* width: 90%; */
	color: black;
	/* font-size: 2vw; */
}
h2 {
	margin: 3% 5% 3% 5%;
}
div img {
	margin: 0 0 2% 0;
	vertical-align: bottom;
}
/* Styling "defaults" across all pages*/
body {
	/* color: #753EB7; */
	text-align: center;
	background-color: white;
}

.attribution {
	color: #000000;
	background-color: white;
	text-align: center;
	padding: 5px 0 0 0;
	margin: 5vw 0 0 0;
	font-size: 2vw;
}
/* Portfolio Homepage */
.container {
    display: grid;
    grid-template-columns: 33% 33% 33%;
    background-color: #ffffff;
    padding: 10px 15px 0 0;
	gap: 10px 10px;
}
.container > div {
	background-color: #f1f1f1;
	border: 2px solid black;
	padding: 1fr;
	/* font-size: 1em; */
	text-align: center;
  }
.project-thumbnail {
	width: 90%;
	/* margin-top: 20px; */
	/* vertical-align: bottom; */
}

/* Portfolio Page Grid Layout */
.portfolio-page-content {
    display: flex;
    background-color: #ffffff;
    padding: 10px 10px 0 0;
	gap: 10px 10px;
}
.portfolio-page-content > div {
	/* width: 50%; */
	background-color: #f1f1f1;
	padding: 1fr;
  }
/* HOMEPAGE */


/* Content Layout- Homepage*/

.homepage {
	display: flex;
	flex-direction: column;
}

.project-thumbnail:hover {
	/*rotate:20deg;*/
	transform:scale(1.1);
}
#portfolio-download {
	color: black;
	font-size: 3vw;
	/* margin: 50% 1%; */
	text-decoration: none;
	padding: 2vw;
	background-color: white;
	border: 2px solid black;
  	border-radius: 10px;
}
#portfolio-download:hover {
	text-decoration: underline;
}
#portfolio-download-box {
	margin: 20% 1%;
}
/* Homepage- text content styling*/
/* .about-message{
	font-family: 'Calistoga', serif;
	margin-left: 13%;
	margin-right: 13%;
	font-size:2em;
} */

header {
	color: black;
	background-color: #000000;
	padding: 10px 0;
	/* width:100%; */

}

button {
	color: white;
	background-color: #FFCAD7;
	padding: 20px;
	/* font-size: 5vw; */
	border-radius: 10px;
	font-family: "Cantora One", sans-serif;
	margin-top: 20px;
}

a:hover{
	text-decoration:underline;
}

.accordion {
	background-color: #eee;
	color: #000000;
	cursor: pointer;
	padding: 18px;
	width: 100%;
	text-align: left;
	border: none;
	outline: none;
	font-size: 3.5vw;
	transition: 0.4s;
  }
  
  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
.active, .accordion:hover {
	background-color: #ccc;
  }
  
  /* Style the accordion panel. Note: hidden by default */
.panel {
	padding: 0 18px;
	background-color: white;
	text-align: left;
	font-size: 2.5vw;
	/* max-height: 0; */
	display: none;
	overflow: hidden;
	transition: max-height 0.2s ease-out;
  }
.accordion:after {
	content: '\02795'; /* Unicode character for "plus" sign (+) */
	font-size: 18px;
	color: #777;
	float: right;
	margin-left: 5px;
  }
  
.active:after {
	content: "\2796"; /* Unicode character for "minus" sign (-) */
  }

.portfolio-nav a {
	text-decoration: none;
	color: #000000;
	float: left;
	font-size: 3vw;
	padding: 2% 16px;
	margin: 0 0 2% 0;
}
.nav-list {
	list-style: none;
}
.subpage-content {
	display: flex;
	flex-direction: column;
}
/* a#nav-home {
	padding: 2% 16px 2% 0;
} */
ul {
	padding-inline-start: 2vw;
}
#nav-block {
	background-color: #f1f1f1;
}
.access-project-section {
    display: flex;
    background-color: #ffffff;
    padding: 10px;
	gap: 10px 10px;
}
.access-project-section > div {
	width: 50%;
	/* justify-content: center; */
	background-color: #ffffff;
	padding: 1fr;
  }

/* Resume Page Styling */
#resume-download {
	padding: 10px;
	background-color: #d3b8f0;
	border: 2px solid black;
  	border-radius: 10px;
	color: black;
	font-size: 4vw;
	margin-top: 10%;
	text-decoration: none;
}
#resume-download:hover {
	text-decoration: underline;
	color: white;
}
.resume-nav a {
	text-decoration: none;
	color: #000000;
	float: left;
	font-size: 4vw;
	padding: 2% 2%;
	margin: 0 0 0 0;
}
.resume-nav ul {
	margin: 2% 0 2% 0;
}
#resume-page-nav {
	background-color: #f1f1f1;
}
.resume-content {
	display: flex;
	flex-direction: column;
}
#resume-download-box {
	margin: 8% 0;
	/* background-color: pink; */
}
.portfolio-link {
	text-decoration: none;
	color: black;
}
.access-project-section {
	margin-left: 0;
	margin-right: 0;
}
.access-project-head {
	margin-top: 2vw;
	width: 20%;
	text-align: right;
	font-size: 3vw;
}
.access-project-links {
	text-align: left;
	margin-top: 2vw;
}
.access-project-links a {
	color: black;
	text-decoration: none;
	font-size: 3vw;
}
.access-project-links a:hover {
	color: rgb(12, 12, 176);
	text-decoration: underline;
}
.embed-caption {
	margin: 1% 2% 1% 2%;
}
/* Validator Download Page Styling */
#validator-download-page {
	height: 300px;
	width: 100%;
	/* width: 100%; */
	background-color: green;
	/* margin: 5% 10%; */
}
#validator-download {
	color: black;
	text-decoration: none;
	font-size: 4vw;
}
#validator-download-h1 {
	margin: 10% 20%;
}
#validator-download:hover {
	text-decoration: underline;
}
/* Carousel */
* {box-sizing: border-box}
    body {font-family: Verdana, sans-serif; margin:0}
    .mySlides {display: none}
    img {vertical-align: middle;}
    
    /* Slideshow container */
    .slideshow-container {
		width: 90%;
      max-width: 1000px;
      position: relative;
      margin: auto;
    }
    
    /* Next & previous buttons */
    .prev, .next {
      cursor: pointer;
      position: absolute;
      top: 50%;
      width: auto;
      padding: 16px;
      margin-top: -22px;
      color: white;
	  background-color: grey;
      font-weight: bold;
      font-size: 18px;
      transition: 0.6s ease;
      border-radius: 0 3px 3px 0;
      user-select: none;
    }
    
    /* Position the "next button" to the right */
    .next {
      right: 0;
      border-radius: 3px 0 0 3px;
    }
    .prev {
		left: 0;
		border-radius: 3px 0 0 3px;
	}
    /* On hover, add a black background color with a little bit see-through */
    .prev:hover, .next:hover {
      background-color: rgba(0,0,0,0.8);
    }
    
    /* Caption text */
    .text {
      color: #f2f2f2;
      font-size: 15px;
      padding: 8px 12px;
      position: absolute;
      bottom: 8px;
      width: 100%;
      text-align: center;
    }
    
    /* Number text (1/3 etc) */
    .numbertext {
      color: #ffffff;
	  background-color: rgb(0 0 0 / 80%);
      font-size: 2vw;
      padding: 1% 1%;
      position: absolute;
      top: 0;
    }
    
    /* The dots/bullets/indicators */
    .dot {
      cursor: pointer;
      height: 15px;
      width: 15px;
      margin: 0 2px;
      background-color: #bbb;
      border-radius: 50%;
      display: inline-block;
      transition: background-color 0.6s ease;
    }
    
    .active, .dot:hover {
      background-color: #717171;
    }
    
    /* Fading animation */
    .fade {
      animation-name: fade;
      animation-duration: 1.5s;
    }
    
    @keyframes fade {
      from {opacity: .4} 
      to {opacity: 1}
    }
    
    /* On smaller screens, decrease text size */
    @media only screen and (max-width: 300px) {
      .prev, .next,.text {font-size: 11px}
    }

/* goodreads vis page styles */
.sub-portfolio-head-background {
	background-color: #f1f1f1;
}
.subpage-content {
	display: flex;
	flex-direction: column;
}
.goodreads-page-content {
	display: flex;
	background-color: #ffffff;
	padding: 10px 10px 0 0;
	gap: 10px 10px;
	}
.goodreads-page-content > div {
	width: 100%;
	text-align: center;
	background-color: #f1f1f1;
	padding: 1fr;
}
.goodreads-content-box {
	margin: 1em;
	padding: 1em 2em;
}
#good_reads_vis_1 {
	margin: 20px;
	width:80%;
}

